--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.0.2",
     "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.5",
     "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
